--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -1,3 +1,7 @@
 <aside>
   <div class="profile-image"></div>
+  <div class="hi"><light>Hi! I'm</light> Karen.</div>
+  <div class="desc">
+    I’m a web developer based in San Francisco. View more of my work here.
+  </div>
 </aside>
