--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -4,4 +4,36 @@
   <div class="desc">
     I’m a web developer based in San Francisco. View more of my work here.
   </div>
+
+  <nav>
+    <ul>
+      <li>Journal</li>
+      <li>Work</li>
+      <li>About</li>
+    </ul>
+  </nav>
+
+  <footer>
+    <ul class="icons">
+      <li>
+        <a href="https://www.linkedin.com/in/karensling">
+          <i class="fa fa-linkedin-square"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/karenling">
+          <i class="fa fa-github-alt"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://instagram.com/hellotwinkie/">
+          <i class="fa fa-instagram"></i>
+        </a>
+      </li>
+      <li>
+        <i class="fa fa-envelope-square"></i>
+      </li>
+    </ul>
+    <copyright>© Karen Ling. All Rights Reserved.</copyright>
+  </footer>
 </aside>
