--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,7 @@ aside {
     background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/profile_image.jpg');
     background-size: 100%;
     margin: auto auto;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
   }
   .hi {
     font-size: 30px;
