--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -22,7 +22,7 @@
       </li>
       <li>
         <a href="https://github.com/karenling">
-          <i class="fa fa-github-alt"></i>
+          <i class="fa fa-github-square"></i>
         </a>
       </li>
       <li>
