Implement Slick carousel.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,11 @@
 <%= render 'sidebar' %>
+
+<div class="main">
+  <%= render 'recent_post' %>
+  <hr class="divider"/>
+  <%= render 'work' %>
+  <hr class="divider"/>
+  <%= render 'about' %>
+  <hr class="divider"/>
+  <%= render 'contact' %>
+</div>
