--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,13 @@
 $light-teal: #c3e8e3;
 $text-color: #a2a2a2;
-
+@mixin grey-border-button {
+  border: 2px solid #efefef;
+  border-radius: 5px;
+  color: #787878;
+  padding: 10px 30px;
+  background: #fff;
+  font: 16px 'Lato';
+}
 body {
   font: 16px 'Lato';
   color: $text-color;
@@ -12,6 +19,42 @@ a {
 }
 light {
   font-weight: 200;
+}
+hr.divider {
+  height: 2px;
+  border: 0;
+  background-color: #efefef;
+}
+.main {
+  position: absolute;
+  top: 0px;
+  left: 375px;
+  padding: 100px;
+  .recent-post {
+    .title {
+      font-size: 36px;
+      color: #787878;
+      font-weight: 400;
+      margin-bottom: 40px;
+    }
+    .body {
+      line-height: 30px;
+    }
+    .read-more {
+      @include grey-border-button;
+    }
+  }
+  .work {
+    overflow: hidden;
+    background-color: red;
+    position: relative;
+    div {
+      position: relative;
+      // width: 700px;
+      background: orange;
+      border: 1px solid red
+    }
+  }
 }
 aside {
   width: Calc(375px - 100px);
