--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,13 @@
 <head>
   <title>Karenling</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/slick/slick.css"/>
+  <link rel="stylesheet" href="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/slick/slick-theme.css">
+
+
+
+
+
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
