--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -1,13 +1,7 @@
 <div class="work">
-  <div>Hello</div>
-  <div>fewafwef</div>
-  <div>fewafew</div>
-  <div>weafwef</div>
-  <div>fewafew</div>
-  <div>fewafew</div>
-  <div>weafwef</div>
-  <div>fewafew</div>
-  <div>fewafew</div>
+  <div><img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_twinkieset.jpg" width="100%"></div>
+  <div><img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_flappy_pig.jpg" width="100%"></div>
+
 </div>
 
 
