--- a/app/views/static_pages/_recent_post.html.erb
+++ b/app/views/static_pages/_recent_post.html.erb
@@ -1,5 +1,5 @@
 <div class="recent-post">
   <div class="title"><%= @recent_post.title %></div>
-  <div class="body"><%= @recent_post.body.html_safe %></div>
+  <div class="body"><%= @recent_post.body.truncate(500).html_safe %></div>
   <button class="read-more">Read more</button>
 </div>
