Implement laptop image.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,8 @@
 <%= render 'sidebar' %>
 
 <div class="main">
+  <%= render 'work2' %>
+  <hr class="divider">
   <%= render 'recent_post' %>
   <hr class="divider"/>
   <%= render 'work' %>
