--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,6 +12,7 @@ body {
   font: 16px 'Lato';
   color: $text-color;
   font-weight: 300;
+  background-color: #f5f5f5;
   -webkit-font-smoothing: subpixel-antialiased;
 }
 a {
@@ -30,6 +31,7 @@ hr.divider {
   top: 0px;
   left: 375px;
   padding: 100px;
+  width: Calc(100% - 375px - 200px);
   .recent-post {
     .title {
       font-size: 36px;
@@ -46,6 +48,15 @@ hr.divider {
   }
   .work {
 
+  }
+  .work2 {
+    .laptop {
+      width: 100%;
+      height: 545px;
+      background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/mac_laptop.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+    }
   }
 }
 aside {
