--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,8 +30,8 @@ hr.divider {
   position: absolute;
   top: 0px;
   left: 375px;
-  padding: 100px;
-  width: Calc(100% - 375px - 200px);
+  padding: 0 50px;
+  width: Calc(100% - 375px - 100px);
   .recent-post {
     .title {
       font-size: 36px;
@@ -50,12 +50,17 @@ hr.divider {
 
   }
   .work2 {
+    position: relative;
+    // background-color: red;
     .laptop {
       width: 100%;
-      height: 545px;
       background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/mac_laptop.png');
       background-size: 100%;
       background-repeat: no-repeat;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -50%;
     }
   }
 }
