--- a/app/views/static_pages/_work2.html.erb
+++ b/app/views/static_pages/_work2.html.erb
@@ -1,3 +1,13 @@
+<div class="preload">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_1.jpg">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_2.jpg">
+</div>
+
+
 <div class="work2">
-  <div class="laptop"></div>
+  <div class="laptop">
+    <div class="portfolio"></div>
+    <div class="description"></div>
+  </div>
+
 </div>
