Implement all portfolio images.

--- a/app/views/static_pages/_work2.html.erb
+++ b/app/views/static_pages/_work2.html.erb
@@ -1,6 +1,8 @@
 <div class="preload">
   <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_1.jpg">
   <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_2.jpg">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_3.jpg">
+
 </div>
 
 
