--- a/app/views/static_pages/_work2.html.erb
+++ b/app/views/static_pages/_work2.html.erb
@@ -9,7 +9,9 @@
 <div class="work2">
   <div class="laptop">
     <div class="portfolio"></div>
-    <div class="description"></div>
+    <div class="description">
+      <div class="content"></div>
+    </div>
   </div>
 
 </div>
