--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -1,14 +1,17 @@
-<div class="work">
-  <div><img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_twinkieset.jpg" width="100%"></div>
-  <div><img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_flappy_pig.jpg" width="100%"></div>
+<div class="preload">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_1.jpg">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_2.jpg">
+  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_3.jpg">
 
 </div>
 
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+<div class="work">
+  <div class="laptop">
+    <div class="portfolio">
 
+    </div>
 
-  <script type="text/javascript">
+  </div>
 
-  </script>
+</div>
