--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,8 +31,8 @@ hr.divider {
   position: absolute;
   top: 0px;
   left: 375px;
-  padding: 0 50px;
-  width: Calc(100% - 375px - 100px);
+  padding: 0;
+  width: Calc(100% - 375px);
   .recent-post {
     .title {
       font-size: 36px;
@@ -54,6 +54,10 @@ hr.divider {
   }
   .work {
     position: relative;
+    // background: red;
+    margin: auto auto;
+    width: Calc(100% - 200px);
+    padding: 0 50px;
     // background-color: red;
     .laptop {
       width: 100%;
@@ -115,6 +119,14 @@ hr.divider {
         }
       }
     }
+  }
+  .contact {
+    position: absolute;
+    top: 300%;
+    bottom: 0px;
+    height: 97%;
+    width: 100%;
+    background-color: #333;
   }
 }
 aside {
