--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -1,7 +1,7 @@
 <div class="preload">
-  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_1.jpg">
-  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_2.jpg">
-  <img src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/portfolio_image_3.jpg">
+  <img src="http://images.karenling.net/aa/portfolio/portfolio_image_1.jpg">
+  <img src="http://images.karenling.net/aa/portfolio/portfolio_image_2.jpg">
+  <img src="http://images.karenling.net/aa/portfolio/portfolio_image_3.jpg">
 
 </div>
 
@@ -9,9 +9,6 @@
 <div class="work">
   <div class="laptop">
     <div class="portfolio">
-
     </div>
-
   </div>
-
 </div>
