--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,8 @@ hr.divider {
   left: 375px;
   padding: 0;
   width: Calc(100% - 375px);
+  -webkit-transition: position 10s; /* Safari */
+  transition: position 10s;
   .recent-post {
     .title {
       font-size: 36px;
@@ -62,7 +64,7 @@ hr.divider {
     // background-color: red;
     .laptop {
       width: 100%;
-      background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/mac_laptop.png');
+      background-image: url('http://images.karenling.net/aa/portfolio/mac_laptop.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
@@ -72,7 +74,7 @@ hr.divider {
     }
     .portfolio {
       position: absolute;;
-      top: 7.438%;
+      top: 7.3%;
       left: 13.3%;
       width: 74%;
       height: 83%;
@@ -125,11 +127,18 @@ hr.divider {
     position: absolute;
     top: 300%;
     bottom: 0px;
-    height: 97%;
+    height: Calc(100% - 200px);
     width: Calc(100% - 200px);
     padding: 100px;
     background-color: #222;
     text-align: center;
+    .container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -195px;
+      margin-left: -268px;
+    }
     .notice {
       display: none;
       padding-top: 10px;
@@ -195,7 +204,7 @@ aside {
   top: 0;
   bottom: 0;
   left: 0;
-  background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/bg.jpg');
+  background-image: url('http://images.karenling.net/aa/portfolio/bg.jpg');
   background-size: 375px;
   color: #fff;
   padding: 50px;
@@ -205,7 +214,7 @@ aside {
     width: 160px;
     height: 160px;
     border-radius: 80px;
-    background-image: url('https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/profile_image.jpg');
+    background-image: url('http://images.karenling.net/aa/portfolio/profile_image.jpg');
     background-size: 100%;
     margin: auto auto;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
