--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -5,14 +5,6 @@
     I’m a web developer based in San Francisco. View more of my work here.
   </div>
 
-  <nav>
-    <ul>
-      <li>Journal</li>
-      <li>Work</li>
-      <li>About</li>
-    </ul>
-  </nav>
-
   <footer>
     <ul class="icons">
       <li>
@@ -31,7 +23,7 @@
         </a>
       </li>
       <li>
-        <i class="fa fa-envelope-square"></i>
+        <i class="fa fa-envelope-square mail"></i>
       </li>
     </ul>
     <copyright>© Karen Ling. All Rights Reserved.</copyright>
