--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Karenling</title>
+  <title>Karen Ling</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="https://images.karenling.net.s3.amazonaws.com/aa/portfolio/favicon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://images.karenling.net.s3.amazonaws.com/aa/portfolio/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://images.karenling.net.s3.amazonaws.com/aa/portfolio/favicon.png">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
