Remove secure from nosecure resources.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,7 @@ hr.divider {
     // background-color: red;
     .laptop {
       width: 100%;
-      background-image: url('https://images.karenling.net/aa/portfolio/mac_laptop.png');
+      background-image: url('http://images.karenling.net/aa/portfolio/mac_laptop.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
@@ -207,7 +207,7 @@ aside {
   top: 0;
   bottom: 0;
   left: 0;
-  background-image: url('https://images.karenling.net/aa/portfolio/bg.jpg');
+  background-image: url('http://images.karenling.net/aa/portfolio/bg.jpg');
   background-size: 375px;
   color: #fff;
   padding: 50px;
@@ -217,7 +217,7 @@ aside {
     width: 160px;
     height: 160px;
     border-radius: 80px;
-    background-image: url('https://images.karenling.net/aa/portfolio/profile_image.jpg');
+    background-image: url('http://images.karenling.net/aa/portfolio/profile_image.jpg');
     background-size: 100%;
     margin: auto auto;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
