--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="profile-image"></div>
   <div class="hi"><light>Hi! I'm</light> Karen.</div>
   <div class="desc">
-    I’m a web developer based in San Francisco. View more of my work here.
+    I’m a web developer based in <br>San Francisco.
   </div>
 
   <footer>
