Implement down arrow.

--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -11,4 +11,50 @@
     <div class="portfolio">
     </div>
   </div>
+
+  <div class="down-arrow">
+    <div class="left"></div>
+    <div class="right"></div>
+  </div>
 </div>
+
+<style type="text/css">
+  .down-arrow {
+    position: absolute;
+    bottom: 70px;
+    left: 50%;
+    margin-left: -20px;
+    -webkit-transition: bottom 800ms linear, opacity 800ms linear; /* Safari */
+    transition: bottom 800ms linear, opacity 800ms linear;
+  }
+
+  .shift-down {
+    bottom: 30px;
+    opacity: 0;
+  }
+
+  .left {
+    position: absolute;
+    height: 3px;
+    width: 40px;
+    background: white;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+
+  }
+
+  .right {
+    position: absolute;
+    left: 27px;
+    height: 3px;
+    width: 40px;
+    background: white;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+    -ms-transform: rotate(-45deg); /* IE 9 */
+    -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
+    transform: rotate(-45deg);
+  }
+
+</style>
