--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -24,6 +24,9 @@
     bottom: 70px;
     left: 50%;
     margin-left: -20px;
+    height: 35px;
+    width: 65px;
+    background-color: transparent;
     -webkit-transition: bottom 800ms linear, opacity 800ms linear; /* Safari */
     transition: bottom 800ms linear, opacity 800ms linear;
   }
@@ -35,6 +38,7 @@
 
   .left {
     position: absolute;
+    top: 15px;
     height: 3px;
     width: 40px;
     background: white;
@@ -47,6 +51,7 @@
 
   .right {
     position: absolute;
+    top: 15px;
     left: 27px;
     height: 3px;
     width: 40px;
