Include period at end of errors. Install pry.

--- a/app/views/static_pages/_contact.html.erb
+++ b/app/views/static_pages/_contact.html.erb
@@ -38,7 +38,7 @@
         console.log(response)
         $('.submit-message').prop('disabled', false);
         $('.errors').fadeIn();
-        $('.errors').html(response.responseJSON.join(". "));
+        $('.errors').html(response.responseJSON.join(". ") + ".");
       }
     });
 
