--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -142,13 +142,16 @@ hr.divider {
       background-color: transparent;
       -webkit-transition: bottom 800ms linear, opacity 800ms linear; /* Safari */
       transition: bottom 800ms linear, opacity 800ms linear;
-      .left {
+      .left, .right {
         position: absolute;
         top: 15px;
         height: 3px;
         width: 40px;
         background: white;
         box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+      }
+      .left {
+        left: 0;
         -ms-transform: rotate(45deg); /* IE 9 */
         -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
         transform: rotate(45deg);
@@ -156,13 +159,7 @@ hr.divider {
       }
 
       .right {
-        position: absolute;
-        top: 15px;
         left: 27px;
-        height: 3px;
-        width: 40px;
-        background: white;
-        box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
         -ms-transform: rotate(-45deg); /* IE 9 */
         -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
         transform: rotate(-45deg);
@@ -170,7 +167,7 @@ hr.divider {
     }
 
     .shift-down {
-      bottom: 30px;
+      bottom: -15px;
       opacity: 0;
     }
 
