--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 
-<div class="work">
+<div class="work portfolio-1">
   <div class="laptop">
     <div class="portfolio" style="background-image: url('http://images.karenling.net/aa/portfolio/portfolio_image_1.jpg')">
       <div class='description'>
@@ -19,7 +19,7 @@
 
 </div>
 
-<div class="work">
+<div class="work portfolio-2">
   <div class="laptop">
     <div class="portfolio" style="background-image: url('http://images.karenling.net/aa/portfolio/portfolio_image_2.jpg')">
       <div class='description'>
@@ -35,7 +35,7 @@
 </div>
 
 
-<div class="work">
+<div class="work portfolio-3">
   <div class="laptop">
     <div class="portfolio" style="background-image: url('http://images.karenling.net/aa/portfolio/portfolio_image_3.jpg')">
       <div class='description'>
