Complete new logic.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,7 +59,8 @@ hr.divider {
 
   .work {
     min-height: 450px;
-    position: fixed;
+    // position: fixed;
+    position: absolute;
     top: 0px;
     right: 50px;
     margin: auto auto;
