--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -12,7 +12,9 @@
       <div class='description'>
         <div class='content'>
           <div class='title'><a href='http://flappypig.karenling.net/'>FlappyPig <i class='fa fa-external-link'></i></a></div>
+
           <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/javascript.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/html5.png'></div>
+
           <div class='body'>Highly addictive video game, inspired by Flappy Bird, BUT with a flying pig! I built the game using JavaScript and HTML5 Canvas. &nbsp;<a href='http://github.com/karenling/Flappy-Pig'><i class='fa fa-github'></i></a></div></div></div>
     </div>
   </div>
@@ -25,7 +27,10 @@
       <div class='description'>
         <div class='content'>
           <div class='title'><a href='http://twinkieset.com'>Twinkieset <i class='fa fa-external-link'></i></a></div>
-          <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/rails.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/javascript.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/backbonejs.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/html5.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/css3.png'></div><div class='body'>Twinkieset is a client photo gallery for modern photographers, inspired by <a href='http://pixieset.com'>Pixieset</a>, built on Rails and Backbone. Photographers can upload photos and create beautifully designed galleries for their clients. &nbsp;<a href='http://github.com/karenling/Twinkieset'><i class='fa fa-github'></i></a>
+
+          <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/rails.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/javascript.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/backbonejs.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/html5.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/css3.png'></div>
+
+          <div class='body'>Twinkieset is a client photo gallery for modern photographers, inspired by <a href='http://pixieset.com'>Pixieset</a>, built on Rails and Backbone. Photographers can upload photos and create beautifully designed galleries for their clients. &nbsp;<a href='http://github.com/karenling/Twinkieset'><i class='fa fa-github'></i></a>
           </div>
         </div>
       </div>
@@ -41,7 +46,10 @@
       <div class='description'>
         <div class='content'>
           <div class='title'><a href='http://github.com/karenling/chess'>Ruby Chess <i class='fa fa-external-link'></i></a></div>
-          <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'></div><div class='body'>Terminal chess implementation, written in Ruby. &nbsp;<a href='http://github.com/karenling/chess'><i class='fa fa-github'></i></a>
+
+          <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'></div>
+
+          <div class='body'>Terminal chess implementation, written in Ruby. &nbsp;<a href='http://github.com/karenling/chess'><i class='fa fa-github'></i></a>
           </div>
         </div>
       </div>
