--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -87,9 +87,9 @@ hr.divider {
       background-repeat: no-repeat;
       -webkit-transition: background-image 600ms; /* Safari */
       transition: background-image 600ms;
-      // &:hover .description {
-      //   opacity: 0.9;
-      // }
+      &:hover .description {
+        opacity: 0.9;
+      }
     }
 
     .description {
@@ -143,6 +143,9 @@ hr.divider {
     }
     .make-opaque {
       opacity: 0.9;
+      &:hover  {
+        opacity: 0 !important;
+      }
     }
   }
 
