--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -154,15 +154,16 @@ hr.divider {
     height: 35px;
     width: 65px;
     background-color: transparent;
+    cursor: pointer;
     -webkit-transition: bottom 800ms linear, opacity 800ms linear; /* Safari */
     transition: bottom 800ms linear, opacity 800ms linear;
     .left, .right {
       position: absolute;
       top: 15px;
-      height: 4px;
+      height: 5px;
       width: 40px;
       background: #fff;
-      box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
     }
     .left {
       left: 0;
@@ -173,7 +174,7 @@ hr.divider {
     }
 
     .right {
-      left: 27px;
+      left: 25px;
       -ms-transform: rotate(-45deg); /* IE 9 */
       -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
       transform: rotate(-45deg);
