--- a/app/views/message_mailer/notification_email.html.erb
+++ b/app/views/message_mailer/notification_email.html.erb
@@ -1,3 +1,3 @@
-<b>From:</b> <%= @name %>
-<b>Email:</b> <%= @email %>
-<b>Message:</b> <%= @body %>
+<p><b>From:</b> <%= @name %></p>
+<p><b>Email:</b> <%= @email %></p>
+<p><b>Message:</b> <%= @body %></p>
