--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -58,7 +58,7 @@
 </div>
 
 
-<div class="down-arrow">
+<div class="down-arrow start-position">
   <div class="left"></div>
   <div class="right"></div>
 </div>
