--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -18,8 +18,8 @@
         </a>
       </li>
       <li>
-        <a href="https://instagram.com/hellotwinkie/">
-          <i class="fa fa-instagram"></i>
+        <a href="http://cheeseandpicklesandwich.tumblr.com//">
+          <i class="fa fa-tumblr-square"></i>
         </a>
       </li>
       <li>
