Update blog link.

--- a/app/views/static_pages/_sidebar.html.erb
+++ b/app/views/static_pages/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="profile-image"></div>
   <div class="hi"><light>Hi! I'm</light> Karen.</div>
   <div class="desc">
-    I’m a web developer based in <br>San Francisco, California with experience in <i>Ruby on Rails</i>, <i>JavaScript</i>, and <i>Backbone.js</i>. 
+    I’m a web developer based in <br>San Francisco, California with experience in <i>Ruby on Rails</i>, <i>JavaScript</i>, and <i>Backbone.js</i>.
   </div>
 
   <footer>
@@ -18,7 +18,7 @@
         </a>
       </li>
       <li>
-        <a href="http://cheeseandpicklesandwich.tumblr.com//">
+        <a href="http://blog.karenling.net">
           <i class="fa fa-tumblr-square"></i>
         </a>
       </li>
